# xplatform-memory

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/games/: mod.rs
src/games/tfoc/: mod.rs  patch.rs
src/games/twfc/: mod.rs  patch.rs
src/memory/: mod.rs  utils.rs  wrapper.rs
src/memory/linux/: memory.rs
src/memory/windows/: memory.rs  mod.rs
