[package]
name = "xplatform-memory"
version = "0.1.0"
edition = "2024"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = [
  "handleapi",
  "memoryapi",
  "processthreadsapi",
  "psapi",
  "winnt",
] }
